--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,21 @@
   box-sizing: border-box;
 }
 .wrapper {
-  width: 320px;
+  width: 100%;
+  max-width: 460px;
   margin: 0 auto;
 }
 .input {
   width: 100%;
-  padding: 5px 10px;
+  padding: 10px 25px;
+  font-size: 18px;
 }
 .description {
   font-size: 12px;
 }
 .button {
   width: 100%;
-  padding: 5px 10px;
+  padding: 10px 25px;
   background: #715ed0;
   border: none;
   color: #ffffff;
