--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@
 }
 .button {
   width: 100%;
-  padding: 10px 25px;
+  padding: 12px 25px;
+  font-size: 18px;
+
   background: #715ed0;
   border: none;
   color: #ffffff;
